<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:columnCount="2"
    android:rowCount="2"
    tools:context=".ListItemsActivity">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/radio_button_name" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/check_box_name" />

    <Switch
        android:id="@+id/switch1"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/switch_name"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:onClick="onClicked"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/image_name" />
</GridLayout>